force-app/main/default/objects/Tracked_Objects__mdt/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <label>Parent Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>