force-app/main/default/objects/Tracked_Objects__mdt/fields/Use_Standard_Record_History__c.field-meta.xml
<CustomField>
    <fullName>Use_Standard_Record_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Standard Record History</label>
    <type>Checkbox</type>
</CustomField>