force-app/main/default/objects/Tracked_Objects__mdt/validationRules/Parent_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Required</fullName>
    <active>true</active>
    <description>When tracking create, delete, and undelete, a parent record is required or records will be orphaned.</description>
    <errorConditionFormula>AND(
ISNULL(Parent_Object__c),
OR(
 Track_Create__c,
 Track_Delete__c ,
 Track_Undelete__c 
))</errorConditionFormula>
    <errorDisplayField>Parent_Object__c</errorDisplayField>
    <errorMessage>A Parent object must be defined to track create, delete, and undelete.</errorMessage>
</ValidationRule>